--- a/graphqlServer/package.json
+++ b/graphqlServer/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "graphql-server-startkit",
+  "name": "graphql-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon ./server.js --exec babel-node"
   },
+  "homepage": "https://github.com/closertb/graphqlDemo#readme",
   "dependencies": {
     "apollo-server-express": "^1.3.0",
     "axios": "^0.16.2",
