--- a/graphqlapp/package.json
+++ b/graphqlapp/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.10",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.8",
