--- a/graphqlapp/.eslintrc
+++ b/graphqlapp/.eslintrc
@@ -1,8 +1,43 @@
 {
   "parser": "babel-eslint",
-  "extends": "eslint-config-hcb",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "jsx": true
+    },
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react"
+  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "env": {
+    "node": true
+  },
   "rules": {
-    "no-param-reassign": [1, { "props": false }]
+    "no-param-reassign": [1, { "props": false }],
+    "no-var": "error",
+    "init-declarations": 2,
+    "max-len": [ 2, 120 ],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-extra-semi": "error",
+    "linebreak-style": ["error", "windows"],
+    "indent": ["error", 2, {"SwitchCase": 1}],
+    "array-bracket-spacing": [2, "never"],
+    "block-scoped-var": 0,
+    "brace-style": [2, "1tbs",{"allowSingleLine": true}],
+    "camelcase": 2,
+    "comma-dangle": [ 2, "always-multiline"],
+    "comma-spacing": [2,{"before": false, "after": true }],
+    "comma-style": [ 2, "last"],
+    "complexity": [ 2, 9 ],
+    "computed-property-spacing": [2, "never"],
+    "no-unused-vars": [ 2,{ "argsIgnorePattern": "^payload" } ],
+    "arrow-parens": [ 2, "as-needed", { "requireForBlockBody": true }],
+    "semi-spacing": [ 0, { "before": false,"after": false}],
+    "react/prop-types": 0,
+    "no-console": "warn"
   },
   "globals": {}
 }
