--- a/graphqlapp/package.json
+++ b/graphqlapp/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^2.9.5"
   },
   "dependencies": {
+    "antd": "^3.7.0",
     "apollo-boost": "^0.1.10",
     "apollo-cache-inmemory": "^1.2.5",
     "apollo-client": "^2.3.5",
