--- a/graphqlServer/package.json
+++ b/graphqlServer/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.3",
     "dataloader": "^1.4.0",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.15.5",
     "glob": "^7.1.2",
     "graphql": "^0.10.1",
     "lodash": "^4.17.4",
