--- a/graphqlServer/package.json
+++ b/graphqlServer/package.json
@@ -14,10 +14,11 @@
     "cors": "^2.8.3",
     "dataloader": "^1.4.0",
     "debug": "~2.6.3",
-    "express": "^4.15.5",
+    "express": "^4.16.3",
     "glob": "^7.1.2",
     "graphql": "^0.10.1",
     "lodash": "^4.17.4",
+    "merge-descriptors": "^1.0.1",
     "morgan": "^1.8.2"
   },
   "devDependencies": {
