feat: got something

--- a/koaProcess/package.json
+++ b/koaProcess/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "koaProcess",
+  "name": "process",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "cluster": "node cluster.js",
+    "fork": "node fork.js"
   },
   "keywords": [],
   "author": "",
