--- a/koaProcess/package.json
+++ b/koaProcess/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
     "cluster": "node cluster.js",
+    "client": "pm2 start pm2.json",
     "fork": "node fork.js",
     "demon": "pm2 start pm2.json --no-daemon"
   },
