--- a/koaProcess/package.json
+++ b/koaProcess/package.json
@@ -18,12 +18,13 @@
     "cluster": "^0.7.7",
     "colors": "^1.3.3",
     "koa": "^2.8.1",
-    "koa-bodyparser": "^4.2.1",
+    "koa-body": "^4.1.1",
     "koa-compress": "^3.0.0",
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "os": "^0.1.1"
+    "os": "^0.1.1",
+    "unzipper": "^0.10.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
