--- a/graphqlServer/package.json
+++ b/graphqlServer/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon ./server.js --exec babel-node"
+    "start": "NODE_ENV=development nodemon src/server.js"
   },
   "homepage": "https://github.com/closertb/graphqlDemo#readme",
   "dependencies": {
-    "apollo-server-express": "^1.3.0",
+    "@babel/runtime": "^7.8.4",
+    "apollo-server": "^2.10.1",
+    "apollo-server-express": "^1.4.0",
     "axios": "^0.16.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
@@ -16,18 +18,12 @@
     "debug": "~2.6.3",
     "express": "^4.16.3",
     "glob": "^7.1.2",
-    "graphql": "^0.10.1",
+    "graphql": "^14.6.0",
     "lodash": "^4.17.4",
     "merge-descriptors": "^1.0.1",
     "morgan": "^1.8.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-inline-import": "^2.0.5",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.0.1",
     "nodemon": "^1.11.0"
   },
   "engines": {
