--- a/graphqlapp/.babelrc
+++ b/graphqlapp/.babelrc
@@ -1,16 +1,11 @@
 {
   "presets": [
-    "react",
-    "es2015",
-    "stage-3"
+    "@babel/preset-env",
+    "@babel/preset-react",
   ],
-  "plugins": [[
-    "transform-runtime",
-    {
-      "helpers": false,
-      "polyfill": false,
-      "regenerator": true,
-      "moduleName": "babel-runtime"
-    }
-  ]]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-object-rest-spread",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]  ]
 }
