--- a/graphqlapp/package.json
+++ b/graphqlapp/package.json
@@ -1,48 +1,32 @@
 {
   "name": "graphqlapp",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server --hot --inline"
+    "pub": "doddle-build pub",
+    "start": "doddle-build start --port 8901"
   },
   "homepage": "https://github.com/closertb/graphqlDemo#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.10.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.5"
+    "@doddle/doddle-build": "^1.1.1",
+    "@doddle/eslint-config-doddle": "~0.0.13"
   },
   "dependencies": {
-    "antd": "^3.7.0",
-    "apollo-boost": "^0.1.10",
-    "apollo-cache-inmemory": "^1.2.5",
-    "apollo-client": "^2.3.5",
-    "apollo-link-http": "^1.5.4",
-    "apollo-link-state": "^0.4.1",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "react": "^16.4.1",
+    "@apollo/react-hooks": "^3.1.1",
+    "antd": "^3.16.1",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "react": "^16.2.0",
     "react-apollo": "^2.1.8",
-    "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^5.1.1"
+  },
+  "webpack": {
+    "copyPublic": true
   }
 }
