--- a/graphqlapp/package.json
+++ b/graphqlapp/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
     "antd": "^3.16.1",
+    "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
