--- a/graphqlapp/package.json
+++ b/graphqlapp/package.json
@@ -13,6 +13,7 @@
     "@doddle/eslint-config-doddle": "~0.0.13"
   },
   "dependencies": {
+    "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.1",
     "antd": "^3.16.1",
     "apollo-boost": "^0.4.7",
@@ -20,6 +21,7 @@
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-state": "^0.4.2",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "react": "^16.2.0",
